labs/Q94/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-all
  namespace: default

spec:

  podSelector: {}

  policyTypes:

    - Ingress
    - Egress
